Adds detection for macOS 10.13.2

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1427,3 +1427,10 @@
     short_name: MAC
     version: "11.1"
     platform: x64
+-
+  user_agent: Safari/13604.4.6 CFNetwork/893.10 Darwin/17.3.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.13.2
+    platform: x64
