--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -571,6 +571,10 @@
   name: 'Mac'
   version: '10.13.3'
 
+- regex: 'CFNetwork/.+ Darwin/17.3.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.13.2'
+
 - regex: 'CFNetwork/(?:887|889|893|897|901|902).*(x86_64)'
   name: 'Mac'
   version: '10.13'
