Adds detection for macOS 10.12.6

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1434,3 +1434,10 @@
     short_name: MAC
     version: 10.13.2
     platform: x64
+-
+  user_agent: Mail/3273 CFNetwork/811.5.4 Darwin/16.6.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.12.6
+    platform: x64
