Adds detection for macOS 10.12.2

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -587,6 +587,10 @@
   name: 'Mac'
   version: '10.12.6'
 
+- regex: 'CFNetwork/.+ Darwin/16.2.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.12.2'
+
 - regex: 'CFNetwork/.+ Darwin/16.1.0.*(x86_64)'
   name: 'Mac'
   version: '10.12.1'
