--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1448,3 +1448,10 @@
     short_name: MAC
     version: 10.12.1
     platform: x64
+-
+  user_agent: Safari/12602.2.14.0.7 CFNetwork/807.1.3 Darwin/16.2.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.12.2
+    platform: x64
