--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1455,3 +1455,10 @@
     short_name: MAC
     version: 10.12.2
     platform: x64
+-
+  user_agent: Safari/12602.3.12.0.1 CFNetwork/807.2.14 Darwin/16.3.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.12.3
+    platform: x64
