--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -587,6 +587,10 @@
   name: 'Mac'
   version: '10.12.6'
 
+- regex: 'CFNetwork/.+ Darwin/16.5.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.12.4'
+
 - regex: 'CFNetwork/.+ Darwin/16.3.0.*(x86_64)'
   name: 'Mac'
   version: '10.12.3'
