Adds detection for macOS 10.11.2

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1462,3 +1462,10 @@
     short_name: MAC
     version: 10.12.4
     platform: x64
+-
+  user_agent: Safari/11601.3.9 CFNetwork/760.2.6 Darwin/15.2.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.11.2
+    platform: x64
