Adds detection for macOS 10.11.3

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -615,6 +615,10 @@
   name: 'Mac'
   version: '10.12'
 
+- regex: 'CFNetwork/.+ Darwin/15.3.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.11.3'
+
 - regex: 'CFNetwork/.+ Darwin/15.2.0.*(x86_64)'
   name: 'Mac'
   version: '10.11.2'
