--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1469,3 +1469,10 @@
     short_name: MAC
     version: 10.11.2
     platform: x64
+-
+  user_agent: com.apple.Safari.SearchHelper/11601.4.2 CFNetwork/760.2.6 Darwin/15.3.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.11.3
+    platform: x64
