Adds detection for macOS 10.11.4

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1476,3 +1476,10 @@
     short_name: MAC
     version: 10.11.3
     platform: x64
+-
+  user_agent: com.apple.Safari.SearchHelper/11601.5.17 CFNetwork/760.4.2 Darwin/15.4.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.11.4
+    platform: x64
