--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1483,3 +1483,10 @@
     short_name: MAC
     version: 10.11.4
     platform: x64
+-
+  user_agent: com.apple.Safari.SearchHelper/11601.6.11 CFNetwork/760.5.1 Darwin/15.5.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.11.5
+    platform: x64
