--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -615,6 +615,10 @@
   name: 'Mac'
   version: '10.12'
 
+- regex: 'CFNetwork/.+ Darwin/15.5.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.11.5'
+
 - regex: 'CFNetwork/.+ Darwin/15.4.0.*(x86_64)'
   name: 'Mac'
   version: '10.11.4'
