Adds detection for macOS 10.10.2

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1490,3 +1490,10 @@
     short_name: MAC
     version: 10.11.5
     platform: x64
+-
+  user_agent: Safari/10600.3.18 CFNetwork/720.2.4 Darwin/14.1.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.10.2
+    platform: x64
