--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -639,6 +639,10 @@
   name: 'Mac'
   version: '10.11'
 
+- regex: 'CFNetwork/.+ Darwin/14.1.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.10.2'
+
 - regex: 'CFNetwork/720'
   name: 'Mac'
   version: '10.10'
