Adds detection for macOS 10.10.3

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1497,3 +1497,10 @@
     short_name: MAC
     version: 10.10.2
     platform: x64
+-
+  user_agent: com.apple.WebKit.WebContent/10600.5.17 CFNetwork/720.3.13 Darwin/14.3.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.10.3
+    platform: x64
