--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -639,6 +639,10 @@
   name: 'Mac'
   version: '10.11'
 
+- regex: 'CFNetwork/.+ Darwin/14.4.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.10.4'
+
 - regex: 'CFNetwork/.+ Darwin/14.3.0.*(x86_64)'
   name: 'Mac'
   version: '10.10.3'
