--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1511,3 +1511,10 @@
     short_name: MAC
     version: 10.10.4
     platform: x64
+-
+  user_agent: Safari/10603.3.8 CFNetwork/720.5.7 Darwin/14.5.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.10.5
+    platform: x64
