Adds detection for macOS 10.9.2

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -659,6 +659,10 @@
   name: 'Mac'
   version: '10.10'
 
+- regex: 'CFNetwork/.+ Darwin/13.1.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.9.2'
+
 - regex: 'CFNetwork/673'
   name: 'Mac'
   version: '10.9'
