--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1525,3 +1525,10 @@
     short_name: MAC
     version: 10.9.2
     platform: x64
+-
+  user_agent: Sleipnir/4.5.1 CFNetwork/673.3 Darwin/13.2.0 (x86_64) (MacBookPro11,1)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.9.3
+    platform: x64
