--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -659,6 +659,10 @@
   name: 'Mac'
   version: '10.10'
 
+- regex: 'CFNetwork/.+ Darwin/13.2.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.9.3'
+
 - regex: 'CFNetwork/.+ Darwin/13.1.0.*(x86_64)'
   name: 'Mac'
   version: '10.9.2'
