--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -914,7 +914,7 @@
   os:
     name: Mac
     short_name: MAC
-    version: "10.9"
+    version: "10.9.5"
     platform: "x64"
 -
   user_agent: Safari/12602.3.12.0.1 CFNetwork/807.2.14 Darwin/16.3.0 (x86_64)
@@ -1519,7 +1519,7 @@
     version: 10.10.5
     platform: x64
 -
-  user_agent: "Safari/9537.74.9 CFNetwork/673.2.1 Darwin/13.1.0 (x86_64) (iMac14%2C1)"
+  user_agent: Safari/9537.74.9 CFNetwork/673.2.1 Darwin/13.1.0 (x86_64) (iMac14%2C1)
   os:
     name: Mac
     short_name: MAC
@@ -1533,7 +1533,7 @@
     version: 10.9.3
     platform: x64
 -
-  user_agent: 'Bloodhound/2.1 CFNetwork/673.4 Darwin/13.3.0 (x86_64) (MacBookPro10%2C1)'
+  user_agent: Bloodhound/2.1 CFNetwork/673.4 Darwin/13.3.0 (x86_64) (MacBookPro10%2C1)
   os:
     name: Mac
     short_name: MAC
