--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -659,6 +659,10 @@
   name: 'Mac'
   version: '10.10'
 
+- regex: 'CFNetwork/.+ Darwin/13.4.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.9.5'
+
 - regex: 'CFNetwork/.+ Darwin/13.3.0.*(x86_64)'
   name: 'Mac'
   version: '10.9.4'
