Adds detection for macOS 10.8.1

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -679,6 +679,10 @@
   name: 'Mac'
   version: '10.9'
 
+- regex: 'CFNetwork/.+ Darwin/12.1.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.8.1'
+
 - regex: 'CFNetwork/596'
   name: 'Mac'
   version: '10.8'
