--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1539,3 +1539,10 @@
     short_name: MAC
     version: 10.9.4
     platform: x64
+-
+  user_agent: 'Reeder/1010.79.00 CFNetwork/596.1 Darwin/12.1.0 (x86_64) (Macmini5%2C2)'
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.8.1
+    platform: x64
