--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1546,3 +1546,10 @@
     short_name: MAC
     version: 10.8.1
     platform: x64
+-
+  user_agent: 'Reeder/1010.79.00 CFNetwork/596.2.3 Darwin/12.2.0 (x86_64) (MacBookAir4%2C2)'
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.8.2
+    platform: x64
