--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1553,3 +1553,10 @@
     short_name: MAC
     version: 10.8.2
     platform: x64
+-
+  user_agent: iCab/5.8.3 CFNetwork/596.3.3 Darwin/12.3.0 (x86_64) (MacBookPro6,2)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.8.3
+    platform: x64
