Adds detection for macOS 10.8.4

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1560,3 +1560,10 @@
     short_name: MAC
     version: 10.8.3
     platform: x64
+-
+  user_agent: 'Sparrow/1178 CFNetwork/596.4.3 Darwin/12.4.0 (x86_64) (MacBookPro8%2C2)'
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.8.4
+    platform: x64
