--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -679,6 +679,10 @@
   name: 'Mac'
   version: '10.9'
 
+- regex: 'CFNetwork/.+ Darwin/12.4.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.8.4'
+
 - regex: 'CFNetwork/.+ Darwin/12.3.0.*(x86_64)'
   name: 'Mac'
   version: '10.8.3'
