Adds detection for macOS 10.8.5

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1567,3 +1567,10 @@
     short_name: MAC
     version: 10.8.4
     platform: x64
+-
+  user_agent: 'Safari/8536.30.1 CFNetwork/596.5 Darwin/12.5.0 (x86_64) (iMac13%2C1)'
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.8.5
+    platform: x64
