Adds detection for macOS 10.7.1

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1574,3 +1574,10 @@
     short_name: MAC
     version: 10.8.5
     platform: x64
+-
+  user_agent: CoverScout%203/3.4.4 CFNetwork/520.0.13 Darwin/11.1.0 (x86_64) (MacBookAir3%2C2)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.7.1
+    platform: x64
