--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -703,6 +703,10 @@
   name: 'Mac'
   version: '10.8'
 
+- regex: 'CFNetwork/.+ Darwin/11.1.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.7.1'
+
 - regex: 'CFNetwork/520'
   name: 'Mac'
   version: '10.7'
