Adds detection for macOS 10.7.2

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1581,3 +1581,10 @@
     short_name: MAC
     version: 10.7.1
     platform: x64
+-
+  user_agent: Safari/7534.51.22 CFNetwork/520.2.5 Darwin/11.2.0 (x86_64) (MacBookAir4%2C1)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.7.2
+    platform: x64
