--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1588,3 +1588,10 @@
     short_name: MAC
     version: 10.7.2
     platform: x64
+-
+  user_agent: Safari/7534.53.10 CFNetwork/520.3.2 Darwin/11.3.0 (x86_64) (Macmini4%2C1)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.7.3
+    platform: x64
