--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -703,6 +703,10 @@
   name: 'Mac'
   version: '10.8'
 
+- regex: 'CFNetwork/.+ Darwin/11.4.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.7.4'
+
 - regex: 'CFNetwork/.+ Darwin/11.3.0.*(x86_64)'
   name: 'Mac'
   version: '10.7.3'
