Adds detection for macOS 10.7.5

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1602,3 +1602,10 @@
     short_name: MAC
     version: 10.7.4
     platform: x64
+-
+  user_agent: 'WebProcess/7534.57.2 CFNetwork/520.4.3 Darwin/11.5.0 (x86_64) (MacBookPro5%2C4)'
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.7.5
+    platform: x64
