--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
-        run: composer install --dev --prefer-dist --no-progress --no-suggest
+        run: composer install --dev --prefer-dist --no-progress --no-suggest --ignore-platform-reqs
       - name: PHPCS check
         uses: chekalsky/phpcs-action@v1
         with:
