Improves webOS version detection

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -206,6 +206,10 @@
 ##########
 # webOS
 ##########
+- regex: 'Web0S; .*WEBOS(\d+[\.\d]+)'
+  name: 'webOS'
+  version: '$1'
+
 - regex: '(?:webOS|web0S|Palm webOS)(?:/(\d+[\.\d]+))?'
   name: 'webOS'
   version: '$1'
