--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1115,3 +1115,10 @@
     short_name: DEE
     version: "15.11"
     platform: x64
+-
+  user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36 HbbTV/1.5.1 (+DRM; LGE; WEBOS6.0; WEBOS6.0 00.00.00; W60_O20N; DTV_W21O;)
+  os:
+    name: webOS
+    short_name: WOS
+    version: "6.0"
+    platform: ""
