--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -3011,7 +3011,7 @@
   user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/38.0.2125.122 Safari/537.36 HbbTV/1.2.1 (+DRM; LGE; 49UH664V-ZC; WEBOS3.0 05.30.02; W3_M16;)
   os:
     name: webOS
-    version: ""
+    version: "3.0"
     platform: ""
   client:
     type: browser
@@ -3029,7 +3029,7 @@
   user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/38.0.2125.122 Safari/537.36 HbbTV/1.2.1 (+DRM; LGE; 55UJ6307-ZA; WEBOS3.5 04.70.45; W3_K3LP;)
   os:
     name: webOS
-    version: ""
+    version: "3.5"
     platform: ""
   client:
     type: browser
@@ -3155,7 +3155,7 @@
   user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) QtWebEngine/5.2.1 Chrome/38.0.2125.122 Safari/537.36 HbbTV/1.2.1 (+DRM; LGE; OLED55B6J-Z; WEBOS3.0 04.30.65; W3_K2L;)
   os:
     name: webOS
-    version: ""
+    version: "3.0"
     platform: ""
   client:
     type: browser
@@ -3173,7 +3173,7 @@
   user_agent: Mozilla/5.0 (Web0S; Linux/SmartTV) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/38.0.2125.122 Safari/537.36 HbbTV/1.2.1 (+DRM; LGE; OLED65C7V-Z; WEBOS3.5 04.70.30; W3_M16P;)
   os:
     name: webOS
-    version: ""
+    version: "3.5"
     platform: ""
   client:
     type: browser
