--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+#Seraphic Sraf (https://www.seraphic-corp.com/)
+- regex: 'Sraf(?:[/ ](\d+[\.\d]+))?'
+  name: 'Seraphic Sraf'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Seewo Browser (http://e.seewo.com/)
 - regex: 'SeewoBrowser/(?:(\d+[\.\d]+))?'
   name: 'Seewo Browser'
@@ -1739,13 +1746,6 @@
 - regex: 'SEMC-Browser(?:[/ ](\d+[\.\d]+))?'
   name: 'SEMC-Browser'
   version: '$1'
-
-#Seraphic Sraf
-- regex: 'Sraf(?:[/ ](\d+[\.\d]+))?'
-  name: 'Seraphic Sraf'
-  version: '$1'
-  engine:
-    default: 'Blink'
 
 #Shiira
 - regex: 'Shiira(?:[/ ](\d+[\.\d]+))?'
