--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6512,3 +6512,21 @@
     model: UAU7000
   os_family: Other Mobile
   browser_family: Chrome
+- 
+  user_agent: HbbTV/1.5.1 (+DRM;Samsung;SmartTV2021:QAQ80;T-NKMDEUC-0912.30;NikeM;urn:samsungtv:familyname:21_NIKEM2_QTV:2021;) Tizen/6.0 (+TVPLUS+SmartHubLink+360avc) Chrome/76 LaTivu_1.0.1_2021 VID/10
+  os:
+    name: Tizen
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: "76"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Samsung
+    model: QAQ80
+  os_family: Other Mobile
+  browser_family: Chrome
