--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6512,3 +6512,43 @@
     model: UAU7000
   os_family: Other Mobile
   browser_family: Chrome
+- 
+  user_agent: HbbTV/1.4.1 (+DRM;Panasonic;SmartTV2018mid;3.061;6301-0003 0008-0000;SmartTV2018;)
+  os: [ ]
+  client: null
+  device:
+    type: tv
+    brand: Panasonic
+    model: Smart TV 2018
+  os_family: Unknown
+  browser_family: Unknown
+- 
+  user_agent: HbbTV/1.4.1 (+DRM;Panasonic;SmartTV2019mid;0.753;4a01-0003 0040-0000;SmartTV2019;)
+  os: [ ]
+  client: null
+  device:
+    type: tv
+    brand: Panasonic
+    model: Smart TV 2019
+  os_family: Unknown
+  browser_family: Unknown
+- 
+  user_agent: HbbTV/1.5.1 (+DRM;Panasonic;SmartTV2020mid;0.323;4901-0003 0008-0000;com.panasonic.SmartTV2020mid;)
+  os: [ ]
+  client: null
+  device:
+    type: tv
+    brand: Panasonic
+    model: Smart TV 2020
+  os_family: Unknown
+  browser_family: Unknown
+- 
+  user_agent: HbbTV/1.5.1 (+DRM;Panasonic;SmartTV2021mid;c.a12;4001-0003 0002-0000;com.panasonic.SmartTV2021mid;)
+  os: [ ]
+  client: null
+  device:
+    type: tv
+    brand: Panasonic
+    model: Smart TV 2021
+  os_family: Unknown
+  browser_family: Unknown
