--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6512,3 +6512,21 @@
     model: UAU7000
   os_family: Other Mobile
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/47.0.2526.106 Safari/537.36 SRAF/4.0 HbbTV/1.4.1 (+DRM; UMC-Sharp; FVP6586; v3.5; v1.0; TP.MS6586.U705,LC-50UI8652E; ) CE-HTML/1.0 FVC/3.0 (UMC-Sharp; FVP6586; )
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: x64
+  client:
+    type: browser
+    name: Chrome
+    version: 47.0.2526.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Sharp
+    model: LC-50UI8652E
+  os_family: GNU/Linux
+  browser_family: Chrome
