--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -206,9 +206,9 @@
 ##########
 # webOS
 ##########
-- regex: '(?:webOS|web0S|Palm webOS)(?:[/]?(\d+[\.\d]+))?'
+- regex: '(?:webOS|web0S|Palm webOS)(?:(; .*WEBOS)?[/]?(\d+[\.\d]+))?'
   name: 'webOS'
-  version: '$1'
+  version: '$2'
 
 - regex: '(?:PalmOS|Palm OS)(?:[/ ](\d+[\.\d]+))?|Palm'
   name: 'palmOS'
