--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -206,9 +206,13 @@
 ##########
 # webOS
 ##########
-- regex: '(?:webOS|web0S|Palm webOS)(?:(; .*WEBOS)?[/]?(\d+[\.\d]+))?'
+- regex: 'Web0S; .*WEBOS(\d+[\.\d]+)'
   name: 'webOS'
-  version: '$2'
+  version: '$1'
+
+- regex: '(?:webOS|web0S|Palm webOS)(?:/(\d+[\.\d]+))?'
+  name: 'webOS'
+  version: '$1'
 
 - regex: '(?:PalmOS|Palm OS)(?:[/ ](\d+[\.\d]+))?|Palm'
   name: 'palmOS'
