--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -206,11 +206,7 @@
 ##########
 # webOS
 ##########
-- regex: 'Web0S; .*WEBOS(\d+[\.\d]+)'
-  name: 'webOS'
-  version: '$1'
-
-- regex: '(?:webOS|web0S|Palm webOS)(?:/(\d+[\.\d]+))?'
+- regex: '(?:Web0S; .*WEBOS|webOS|web0S|Palm webOS)(?:[/]?(\d+[\.\d]+))?'
   name: 'webOS'
   version: '$1'
 
