--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6520,8 +6520,8 @@
     platform: x64
   client:
     type: browser
-    name: Chrome
-    version: 47.0.2526.106
+    name: Seraphic Sraf
+    version: 4.0
     engine: Blink
     engine_version: ""
   device:
