--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -198,7 +198,7 @@ Selevision:
 
 # Sharp
 Sharp:
-  regex: '(UMC-)?Sharp'
+  regex: '(?:UMC-)?Sharp'
   device: 'tv'
   models:
     - regex: 'Sharp[,;] ?((?! |HbbTV)[^),;/]+)'
