--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6519,7 +6519,7 @@
   device:
     type: tv
     brand: Panasonic
-    model: Smart TV 2018
+    model: Smart TV (2018)
   os_family: Unknown
   browser_family: Unknown
 - 
@@ -6529,7 +6529,7 @@
   device:
     type: tv
     brand: Panasonic
-    model: Smart TV 2019
+    model: Smart TV (2019)
   os_family: Unknown
   browser_family: Unknown
 - 
@@ -6539,7 +6539,7 @@
   device:
     type: tv
     brand: Panasonic
-    model: Smart TV 2020
+    model: Smart TV (2020)
   os_family: Unknown
   browser_family: Unknown
 - 
@@ -6549,6 +6549,6 @@
   device:
     type: tv
     brand: Panasonic
-    model: Smart TV 2021
+    model: Smart TV (2021)
   os_family: Unknown
   browser_family: Unknown
