--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -156,7 +156,7 @@ Panasonic:
     - regex: 'DIGA Webkit ([A-Z]{1}[0-9]{4})'
       model: 'DIGA $1'
     - regex: 'SmartTV(201[89]|202[0-1])'
-      model: 'Smart TV $1'
+      model: 'Smart TV ($1)'
 
 # PEAQ
 PEAQ:
