feat(device) detect new brand Helio models: S5, S60 feat(device) detect new brand SPC models: Gravity OctaCore, Gravity Max feat(device) detect brand Maxwest models: Gravity 55 GO, Gravity 5 GO feat(device) detect brand Condor model: Griffe T8 feat(device) detect brand Huawei model: Nova 5i (GLK-LX1U) feat(device) detect brand Zuum model: Gravity Z feat(device) detect brand General Mobile models: GM 9 Pro, GM 9 Plus feat(device) detect brand Beelink models: GT1 Mini, GT1 Mini 2 feat(device) detect brand Gigaset models: GS100, GS110, GS180, GS190, GS185, GS195, GS280, GS290 GS80 feat(device) detect brand DEXP models: GS150, GS153, GS155

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3651,6 +3651,8 @@ Condor:
       model: 'Griffe T7'
     - regex: 'Griffe T8 Plus'
       model: 'Griffe T8 Plus'
+    - regex: 'Griffe T8'
+      model: 'Griffe T8'
     - regex: 'Griffe T9'
       model: 'Griffe T9'
     - regex: 'PGN\-?522'
@@ -4009,7 +4011,7 @@ Desay:
 
 # DEXP
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|IxionML4.7|M150Storm|(?:SENIOR|F4[38]D8000K|VA[12]10|VA170|ML450|MS[56]50|BL[123]50|BS155|BS160|BS[1256]50|AL[12]40|AL[23]50|AS155|AS260| (?:N280i|P380i|R110|B450|B340|A1[45]0))(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|IxionML4.7|M150Storm|(?:SENIOR|F4[38]D8000K|VA[12]10|VA170|ML450|MS[56]50|BL[123]50|BS155|BS160|BS[1256]50|AL[12]40|AL[23]50|AS155|AS260|GS15[035]| (?:N280i|P380i|R110|B450|B340|A1[45]0))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Ixion[_ ]([^;/]+)(?: Build|\))'
@@ -4049,7 +4051,7 @@ DEXP:
     - regex: 'H135[ _]Build'
       model: 'Atlas'
       device: 'desktop'
-    - regex: '(BL[123]50|BS155|BS160|BS[1256]50|AL[12]40|A1[45]0)(?:[);/ ]|$)'
+    - regex: '(BL[123]50|BS155|BS160|BS[1256]50|AL[12]40|A1[45]0|GS15[035])(?:[);/ ]|$)'
       model: '$1'
     - regex: 'DEXP[ _]([^;/]+) Build'
       model: '$1'
@@ -5459,7 +5461,7 @@ Gemini:
 
 # General Mobile
 General Mobile:
-  regex: 'GM 5 Plus|GM8 go|GM [68] d|GM 8|General Mobile 4G'
+  regex: 'GM 5 Plus|GM8 go|GM [68] d|GM 8|General Mobile 4G|GM 9 (?:Pro|Plus)'
   device: 'smartphone'
   models:
     - regex: 'GM 5 Plus'
@@ -5470,6 +5472,10 @@ General Mobile:
       model: 'GM 8'
     - regex: 'GM8 go'
       model: 'GM 8 Go'
+    - regex: 'GM 9 Pro'
+      model: 'GM 9 Pro'
+    - regex: 'GM 9 Plus'
+      model: 'GM 9 Plus'
     - regex: 'General Mobile 4G Dual'
       model: '4G Dual'
     - regex: 'General Mobile 4G'
@@ -5514,7 +5520,7 @@ Gigabyte:
 
 # Gigaset
 Gigaset:
-  regex: 'Gigaset|(?:GS5[357]-6|GS[23]70(?:_Plus)?)(?:[);/ ]|$)'
+  regex: 'Gigaset|(?: GS80|GS1[0189]0|GS1[89]5|GS2[89]0|GS5[357]-6|GS[23]70(?:_Plus)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Gigaset QV(1030|830)'
@@ -5523,7 +5529,7 @@ Gigaset:
 
     - regex: 'G(S[23]70)[_ ]Plus(?:[);/ ]|$)'
       model: 'G$1 Plus'
-    - regex: 'GS([23]70)(?:[);/ ]|$)'
+    - regex: 'GS([23]70|1[0189]0|1[89]5|2[89]0|80)(?:[);/ ]|$)'
       model: 'GS$1'
     - regex: 'GS57-6'
       model: 'ME Pro'
@@ -5961,7 +5967,7 @@ Minix:
 
 # Huawei
 Huawei:
-  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))(?:[);/ ]|$))|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-(?:[AT]N00|AN90|NX9A)|GLK-[AT]L00|JER-[AT]N10|ELS-(?:[AT]N[10]0|NX9|N39|N04)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL[02]0|LX9N)|NTS-AL00|ART-(?:[AT]L00[xm]|L29N?|L28)|JEF-(?:[AT]N00|AN20)|MED-(?:[AT]L00|LX9N?)|EBG-AN[01]0|ANA-(?:[AT]N00|NX9)|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-[AT]N(?:00a?|10)|KKG-AN00|MXW-AN00|JKM-AL00[ab]|TAH-(?:N29|AN00)m|C8817D|T1-821W|d-01J|d-02[HK]|KRJ-W09|HWT31|Y320-U10|Y541-U02|VAT-L19|70[14]HW|60[58]HW|NOH-(?:NX9|AN00)|TNNH-AN00|LIO-(?:[TA]L00|[LN]29|AN00)|KOB2-[LW]09|PPA-LX2|AGS3-L09|DNN-LX9|NEY-NX9|LON-AL00|HLK-L41'
+  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))(?:[);/ ]|$))|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-(?:[AT]N00|AN90|NX9A)|GLK-(?:[AT]L00|LX1U)|JER-[AT]N10|ELS-(?:[AT]N[10]0|NX9|N39|N04)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL[02]0|LX9N)|NTS-AL00|ART-(?:[AT]L00[xm]|L29N?|L28)|JEF-(?:[AT]N00|AN20)|MED-(?:[AT]L00|LX9N?)|EBG-AN[01]0|ANA-(?:[AT]N00|NX9)|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-[AT]N(?:00a?|10)|KKG-AN00|MXW-AN00|JKM-AL00[ab]|TAH-(?:N29|AN00)m|C8817D|T1-821W|d-01J|d-02[HK]|KRJ-W09|HWT31|Y320-U10|Y541-U02|VAT-L19|70[14]HW|60[58]HW|NOH-(?:NX9|AN00)|TNNH-AN00|LIO-(?:[TA]L00|[LN]29|AN00)|KOB2-[LW]09|PPA-LX2|AGS3-L09|DNN-LX9|NEY-NX9|LON-AL00|HLK-L41'
   device: 'smartphone'
   models:
     - regex: 'POT-[TA]L00a(?:[);/ ]|$)'
@@ -6314,7 +6320,7 @@ Huawei:
       model: 'Nova 5'
     - regex: 'SEA-AL10(?:[);/ ]|$)'
       model: 'Nova 5 Pro'
-    - regex: 'GLK-[AT]L00(?:[);/ ]|$)'
+    - regex: 'GLK-(?:[AT]L00|LX1U)(?:[);/ ]|$)'
       model: 'Nova 5i'
     - regex: 'SPN-TL00(?:[);/ ]|$)'
       model: 'Nova 5i Pro'
@@ -9062,7 +9068,7 @@ Masstel:
 
 # Maxwest
 Maxwest:
-  regex: '(?:Astro_5N_LTE|Virtue Z5|Astro X55s|Nitro_4)(?:[);/ ]|$)'
+  regex: '(?:Astro_5N_LTE|Virtue Z5|Astro X55s|Nitro_4|Gravity_55?_GO)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Astro_5N_LTE'
@@ -9073,6 +9079,8 @@ Maxwest:
       model: 'Astro X55s'
     - regex: 'Nitro_4'
       model: 'Nitro 4'
+    - regex: 'Gravity_(55?)_GO'
+      model: 'Gravity $1 GO'
 
 # Maze
 Maze:
@@ -13557,6 +13565,12 @@ Symphony:
     - regex: 'SYMPHONY[ \_]([a-z0-9]+)'
       model: '$1'
 
+# Helio
+Helio:
+  regex: 'Helio (S60|S5)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
 # Syrox
 Syrox:
   regex: '(SYX-(?:T70[04]|T10[12]))(?:[);/ ]|$)'
@@ -16354,7 +16368,7 @@ ZTE:
       model: '$1'
 
 Zuum:
-  regex: 'Zuum[ _-]|COVET|MAGNO|ONIX S|STEDI|STELLAR Z'
+  regex: 'Zuum[ _-]|(?:COVET|MAGNO|ONIX S|STEDI|STELLAR Z|GRAVITY Z)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'COVET'
@@ -16367,6 +16381,8 @@ Zuum:
       model: 'Stedi'
     - regex: 'STELLAR Z'
       model: 'Stellar Z'
+    - regex: 'GRAVITY Z'
+      model: 'Gravity Z'
     - regex: 'Zuum[ _-]([^;/]+) Build'
       model: '$1'
     - regex: 'Zuum[ _-]?([^;/)]+)(?:[);/ ]|$)'
@@ -17028,7 +17044,7 @@ Kanji:
     - regex: 'KJ-YUBI(?:[);/ ]|$)'
       model: 'Yubi 3G'
 
-#Kaiomy
+# Kaiomy
 Kaiomy:
   regex: 'KaiCloud[ ]?(7[48]4|942)(?:[);/ ]|$)'
   device: 'tablet'
@@ -18195,9 +18211,15 @@ Avenzo:
 
 # Beelink
 Beelink:
-  regex: 'Beelink (GT1|LAKE I|SEA I|A1)(?:[);/ ]|$)'
+  regex: '(?:Beelink (?:GT1|LAKE I|SEA I|A1)|GT1mini-2|GT1-mini(?:-AT)?)(?:[);/ ]|$)'
   device: 'tv'
-  model: '$1'
+  models:
+    - regex: 'Beelink (?:GT1|LAKE I|SEA I|A1))(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'GT1-mini(?:-AT)?(?:[);/ ]|$)'
+      model: 'GT1 Mini'
+    - regex: 'GT1mini-2(?:[);/ ]|$)'
+      model: 'GT1 Mini 2'
 
 # MAXVI
 MAXVI:
@@ -18674,6 +18696,16 @@ BioRugged:
       model: 'BioWolf 8-F30'
     - regex: 'Ruggbo 20 Lite'
       model: 'Ruggbo 20 Lite'
+
+# SPC or SPC Universe or SPC Mobile (spc.es)
+SPC:
+  regex: '(?:Gravity Max|GRAVITY_OCTACORE)(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: 'GRAVITY_OCTACORE'
+      model: 'Gravity OctaCore'
+    - regex: 'Gravity Max'
+      model: 'Gravity Max'
 
 # Leff
 Leff:
