feat(device) detect brand Vestel models: Venus E2 Plus, Venus E2 Plus Dual

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14402,7 +14402,7 @@ Verykool:
 
 # Vestel (vestel.com)
 Vestel:
-  regex: 'Vestel[ _]|Venus[ _](GO|E[43]|V[1-9]|Z[1-9]0)|V_?TAB|VP74|VT97PRO|VSP145M|VSP250[GS]|VSP355[GS]|V3_5580_Dual'
+  regex: 'Vestel[ _]|Venus[ _](GO|E[234]|V[1-9]|Z[1-9]0)|V_?TAB|VP74|VT97PRO|VSP145M|VSP250[GS]|VSP355[GS]|V3_5580_Dual'
   device: 'smartphone'
   models:
     - regex: 'VT97PRO'
@@ -14438,6 +14438,10 @@ Vestel:
       model: 'Venus Z$1'
     - regex: 'Venus[ _]GO'
       model: 'Venus Go'
+    - regex: 'Venus E2 Plus Dual'
+      model: 'Venus E2 Plus Dual'
+    - regex: 'Venus[ _]E2 Plus'
+      model: 'Venus E2 Plus'
     - regex: 'Venus[ _]E([34])'
       model: 'Venus E$1'
     - regex: 'Vestel_5000_Dual'
@@ -16221,7 +16225,7 @@ ZTE:
       model: 'Blade X9'
     - regex: 'Blade V8Q(?:[);/ ]|$)'
       model: 'Blade V8Q'
-    - regex: 'Blade (?:V8 SE|V0820)(?:[);/ ]|$)'
+    - regex: 'Blade V8 SE(?:[);/ ]|$)'
       model: 'Blade V8 SE'
     - regex: 'Blade V9 Vita(?:[);/ ]|$)'
       model: 'Blade V9 Vita'
