--- a/Tests/fixtures/smartphone-19.yml
+++ b/Tests/fixtures/smartphone-19.yml
@@ -5434,6 +5434,7 @@
     brand: Winmax
     model: XC4
   os_family: Android
+  browser_family: Chrome
 -
   user_agent: Mozilla/5.0 (Linux; Android 4.4.2; Winmax TX30 Build/KOT49H) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Safari/537.36
   os:
@@ -5503,7 +5504,7 @@
   device:
     type: smartphone
     brand: ZTE
-    model: Blade V8 SE
+    model: Blade V8 Lite
   os_family: Android
   browser_family: Chrome
 -
@@ -5522,5 +5523,41 @@
     type: smartphone
     brand: Huawei
     model: P8 Lite (2015)
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; Venus E2 Plus) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.81 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 85.0.4183.81
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Vestel
+    model: Venus E2 Plus
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; Venus E2 Plus Dual) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.81 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 85.0.4183.81
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Vestel
+    model: Venus E2 Plus Dual
   os_family: Android
   browser_family: Chrome
