Adds detection for tvOS and removes Apple TV
tvOS is mostly based on iOS >= 8.

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -570,9 +570,9 @@
 -
   user_agent: XBMC/PRE-11.0 Git:20110623-62171b3 (iOS; 11.0.0 AppleTV2,1; http://www.xbmc.org)
   os:
-    name: Apple TV
-    short_name: ATV
-    version:
+    name: tvOS
+    short_name: TVS
+    version: 11.0.0
     platform:
 -
   user_agent: Mozilla/5.0 (SAMSUNG; SAMSUNG-GT-S7230E-VODAFONE/S723EBUJJ3; U; Bada/1.0; en-us) AppleWebKit/533.1 (KHTML, like Gecko) Dolfin/2.0 Mobile WQVGA SMM-MMS/1.2.0 NexPlayer/3.0 profile/MIDP-2.1 configuration/CLDC-1.1 OPN-B
@@ -1129,3 +1129,10 @@
     short_name: COS
     version: 85.0.4183.133
     platform: ARM
+-
+  user_agent: AppleCoreMedia/1.0.0.17J586 (Apple TV; U; CPU OS 13_0 like Mac OS X; nb_no)
+  os:
+    name: tvOS
+    short_name: TVS
+    version: "13.0"
+    platform: ""
