--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -1114,7 +1114,10 @@
   browser_family: Unknown
 - 
   user_agent: iTunes-AppleTV/4.1
-  os: [ ]
+  os:
+    name: iOS
+    version: ""
+    platform: ""
   client:
     type: mediaplayer
     name: iTunes
@@ -1123,7 +1126,7 @@
     type: tv
     brand: Apple
     model: Apple TV
-  os_family: Unknown
+  os_family: iOS
   browser_family: Unknown
 - 
   user_agent: AppleCoreMedia/1.0.0.12B466 (Apple TV; U; CPU OS 8_1_3 like Mac OS X; en_us)
@@ -1141,8 +1144,8 @@
 - 
   user_agent: XBMC/PRE-11.0 Git:20110623-62171b3 (iOS; 11.0.0 AppleTV2,1; http://www.xbmc.org)
   os:
-    name: Apple TV
-    version: ""
+    name: tvOS
+    version: 11.0.0
     platform: ""
   client:
     type: mediaplayer
@@ -1152,7 +1155,7 @@
     type: tv
     brand: Apple
     model: Apple TV 2
-  os_family: Apple TV
+  os_family: iOS
   browser_family: Unknown
 - 
   user_agent: 'OPR/22.0.1481.0 OMI/4.2.12.29, KreaTV/0.0.0.0 (ARRIS, IPC1100, wired)CM[00.01]'
@@ -6569,4 +6572,30 @@
     brand: Panasonic
     model: Smart TV (2021)
   os_family: Unknown
+  browser_family: Unknown
+- 
+  user_agent: AppleCoreMedia/1.0.0.12H911 (Apple TV; U; CPU OS 8_4_4 like Mac OS X; en_us)
+  os:
+    name: iOS
+    version: 8.4.4
+    platform: ""
+  client: null
+  device:
+    type: tv
+    brand: Apple
+    model: Apple TV
+  os_family: iOS
+  browser_family: Unknown
+- 
+  user_agent: AppleCoreMedia/1.0.0.18J383 (Apple TV; U; CPU OS 14_0 like Mac OS X; en_us)
+  os:
+    name: tvOS
+    version: "14.0"
+    platform: ""
+  client: null
+  device:
+    type: tv
+    brand: Apple
+    model: Apple TV
+  os_family: iOS
   browser_family: Unknown
