--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -1133,7 +1133,7 @@
   os:
     name: iOS
     version: "8.1.3"
-    platform: ""
+    platform: ARM
   client: null
   device:
     type: tv
@@ -1146,7 +1146,7 @@
   os:
     name: tvOS
     version: 11.0.0
-    platform: ""
+    platform: ARM
   client:
     type: mediaplayer
     name: XBMC
@@ -6578,7 +6578,7 @@
   os:
     name: iOS
     version: 8.4.4
-    platform: ""
+    platform: ARM
   client: null
   device:
     type: tv
@@ -6591,7 +6591,7 @@
   os:
     name: tvOS
     version: "14.0"
-    platform: ""
+    platform: ARM
   client: null
   device:
     type: tv
