Improves detection for watchOS

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -303,7 +303,7 @@
 ##########
 # watchOS (https://developer.apple.com/watchos/)
 ##########
-- regex: 'watchOS/(\d+[\.\d]*)'
+- regex: '(?:Watch1,[12]/|Watch OS,|watchOS[ /])(\d+[\.\d]*)'
   name: 'watchOS'
   version: '$1'
 
